2000-09-13  Adam Fedor  <fedor@gnu.org>

	* Remove dependance on Source/Foundation link, additional MINGW ports.
	* Makefile.postamble (header-links): Remove Source/Foundation link.
	* Source/Makefile.preamble (HEADER_DIR): New variable.
	(ADDITIONAL_INCLUDE_DIRS): Include ../Headers.
	* Source/GNUmakefile (GENERATED_HEADERS): Change Foundation 
	to $(HEADER_DIR).
	* Source/Makefile.postamble: Likewise.

	* Source/GSTcpPost.m: Update to handle MINGW (mostly copied from
	gdomap.c).
	* Source/NSFileManager.m (-findNextFile): Check if lstat,
	geteuid implemented.
	* Source/NSHost.m: Change includes for MINGW.
	* Source/NSPortNameServer.m: Likewise.
	* Source/NSPipe.m (init): Port to MINGW.

	* configure.in: Do preface.h substitutions here.
	* Source/Makefile.postamble (preface.h): Remove target.

2000-09-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSCompatibility.m: new file for MacOSX compatibility flags
	* Source/GNUmakefile: add GSCompatibility.m
	* Source/NSGeometry.m: Use GSMacOSXCompatibleGeometry() function to
	decide whether to produce MacOS-X format strings.
	* Source/propList.h: Parse MacOS-X format property lists as well as
	OpenStep format ones.

2000-09-12  Adam Fedor  <fedor@gnu.org>

	* configure.in: Check for symlin, readlink.

	* Source/GNUmakefile: Don't compile UnixFileHandle.m on mingw.
	(Will create WindowsFileHandle later...).

	* Source/NSFileManager.m (-createDirectoryAtPath:attributes:]): 
	Create subpaths on mingw.
	(isDeletableFileAtPath:): Implement for mingw.
	(createSymbolicLinkAtPath): Implement only if HAVE_SYMLINK
	(pathContentOfSymbolicLinkAtPath): Implement only if HAVE_READLINK

2000-09-13  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gnustep/base/Unicode.h:
	Make function encode_ustrtostr public
	* Headers/gnustep/base/NSString.h:
	Added extra encodings. Added missing methods 
	* Source/NSString.m: 
	Added basic implementation for missing methods
	[stringWithUTF8String:], [initWithUTF8String:], [UTF8String],